# packagetest

./: README.md  pyproject.toml
src/: setup.py
src/walpackagetest/: core.py
